@@ -19,12 +19,11 @@ if ( ! $@ )
 
 $|=1;
 # Predefined values:
-my $version           = "=V";
+my $version           = "@abiname@@localversion@";
 my $link_in_boot      = "";
-my $kimage            = "=K";
-my $initrd            = "=I";     # initrd kernel
+my $kimage            = "@image-stem@";
+my $initrd            = "@initramfs@";
 my $postrm_hook       = '';       #Normally we do not
-my $ramdisk           = "=MK";  # List of tools to create initial ram fs.
 my $package_name    = "linux-image-$version";
 
 #known variables
