@@ -8,8 +8,8 @@ my $capb=capb("backup");
 
 $|=1;
 # Predefined values:
-my $version         = "=V";
-my $kimage          = "=K";
+my $version         = "@abiname@@localversion@";
+my $kimage          = "@image-stem@";
 my $prerm_hook      = '';       #Normally we do not
 my $package_name    = "linux-image-$version";
 
