@@ -14,6 +14,8 @@ linux (3.11~rc5-1~exp1) UNRELEASED; urgency=low
     - Move all templates under debian/templates
     - linux-image: Remove undocumented $KERNEL_ARCH variable from hook
       environment
+    - Use only one template syntax (@keyword@) and do all substitutions
+      in gencontrol.py
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 11 Aug 2013 19:34:47 +0200
 
